Add confirmations before doing destructive operations. Add description to asset class selection dialog.